# AutoBCI-Harness

./: .gitignore  AGENTS.md  DEMO_QUICKSTART.md  PUBLIC_EXPORT_MANIFEST.md  README.md  llms.txt  package.json  pyproject.toml
.agents/skills/autobci-harness/: SKILL.md
.agents/skills/tui-pty-harness/: SKILL.md
configs/: control_plane_direction_tags.json
dashboard/: index.html
docs/: 2026-06-17_mobile_gateway_marketing_draft.md  architecture-diagram-source.txt  mobile_gateway_setup.md  research_forest.md  storage_budget.md
docs/assets/logos/: README.md
experiments/rsvp_ship_image_structure/: structure_runner.py
programs/rsvp_ship_image_only_v0/: ProgramMD.md  program.json
reports/records/: legacy_gait_status_history.json
scripts/: export_dashboard_snapshot.py  install.sh  install_linux.sh  install_windows.ps1  run_rsvp_ship_image_autoresearch.py  serve_dashboard.py
src/bci_autoresearch/: data_paths.py  platform_support.py  storage_guard.py  storage_optimizer.py
src/bci_autoresearch/agent_runtime/: __init__.py  cli.py  ledger.py  runtime.py  safety.py
src/bci_autoresearch/control_plane/: __init__.py  builtin_patch_worker.py  cli.py  client_api.py  commands.py  director.py  director_plan.py  guard.py  judge.py  messages.py  paths.py  program_contract.py  programs.py  registry.py  research_control.py  research_loop.py  runtime_store.py  thinking.py
src/bci_autoresearch/eval/: __init__.py  (+5 more)
tests/: test_goal_perp_research_tree.py  test_headless_cli.py  test_public_claimed_surfaces.py  test_rsvp_ship_image_autoresearch.py  test_storage_optimizer.py
(+38 files in other folders)
