[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobci"
version = "0.1.0"
description = "Local auditable research-loop harness alpha for BCI and image experiments"
requires-python = ">=3.10"
dependencies = ["rich>=13.7"]

[project.optional-dependencies]
dev = ["pexpect>=4.9", "pyte>=0.8", "pytest>=8"]

[project.scripts]
autobci = "bci_autoresearch.product_shell.cli:main"
autobci-agent = "bci_autoresearch.control_plane.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bci_autoresearch.providers" = ["*.mjs"]
